SLING-12868 migrate to Sling API 3.x and Jakarta Servlet (#26)